# wit_node

./: CMakeLists.txt  README.md  package.xml
include/ecl/mobile_robot/kinematics/: differential_drive.hpp
include/wit_node/: command.hpp  data.hpp  parameter.hpp  wit_driver.hpp  wit_ros.hpp
include/wit_node/packet_handler/: packet_finder.hpp  payload_base.hpp  payload_headers.hpp
launch/: wit.launch
msg/: ImuGpsRaw.msg
plugins/: nodelet_plugins.xml
src/: CMakeLists.txt
src/driver/: CMakeLists.txt  command.cpp  data.cpp  packet_finder.cpp  wit_driver.cpp
src/nodelet/: CMakeLists.txt  wit_nodelet.cpp
src/ros/: CMakeLists.txt  wit_ros.cpp
src/test/: CMakeLists.txt  initialization.cpp
